# memoparsa-rs

./: .gitignore  Cargo.toml  README.md
data/: alpha2.md
examples/convert_alpha_to_ics/: main.rs
src/: lib.rs  main.rs
src/api/: mod.rs
src/format/: mod.rs
src/format/alpha/: mod.rs  test.rs
src/format/calendar/: mod.rs
src/format/calendar/tests/: calendar.md  mod.rs
src/format_spec/: mod.rs
src/format_spec/alpha/: mod.rs  test.rs
src/tests/: mod.rs
src/tests/alpha/: alpha.md  buffer.txt  mod.rs
src/tests/calendar/: mod.rs
tests/alpha/: mod.rs
