[package]
authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>",
           "tupsu <tupsuosu@gmail.com>"]
edition = "2018"
name = "memoparsa"
version = "0.1.0"
[dependencies]
clap = "2.33.0"
chrono = "*"
chrono-tz = "*"
env_logger = "0.6.1"
ics = "*"
lazy_static = "*"
log = "0.4.6"
maplit = "*"
uuid = { version = "*", features = ["v4"] }

[dev-dependencies]
